Ajax request sample

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -4,3 +4,14 @@ play.assets {
   path = "/public"
   urlPrefix = "/assets"
 }
+
+play.http.filters = filters.CustomFilters
+play.filters {
+  headers {
+    frameOptions = SAMEORIGIN
+    xssProtection = null
+    contentTypeOptions = null
+    permittedCrossDomainPolicies = null
+    contentSecurityPolicy = null
+  }
+}
